fix z-index for top bar

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -40,6 +40,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 30;
 }
 
 nav h1 {
